[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Fonts/Sabo/Sabo-Filled.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Fonts/Sabo/MainmenuFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Scripts/Menus/MainMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 18
outline_size = 1
outline_color = Color( 0.184314, 0.388235, 0.517647, 0.513726 )
use_filter = true
font_data = ExtResource( 1 )

[node name="GameOver" type="Node2D"]
script = ExtResource( 3 )
SceneFolder = "Levels"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -5.0
margin_top = -4.0
margin_right = 261.0
margin_bottom = 229.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMC" type="MarginContainer" parent="."]
margin_right = 256.0
margin_bottom = 224.0
custom_constants/margin_right = 10
custom_constants/margin_top = 20
custom_constants/margin_left = 16
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVB" type="VBoxContainer" parent="MainMC"]
margin_left = 16.0
margin_top = 20.0
margin_right = 246.0
margin_bottom = 220.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="MainMC/MainVB"]
margin_right = 230.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "A Invaders C"
align = 1
valign = 1

[node name="GameOverLabel" type="Label" parent="MainMC/MainVB"]
self_modulate = Color( 0.447059, 0.227451, 0.227451, 1 )
margin_top = 27.0
margin_right = 230.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Game Over"
align = 1
valign = 1

[node name="VSeparator" type="VSeparator" parent="MainMC/MainVB"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 54.0
margin_right = 230.0
margin_bottom = 101.0
rect_min_size = Vector2( 0, 32 )
size_flags_vertical = 3

[node name="InteractLabel" type="Label" parent="MainMC/MainVB"]
margin_top = 105.0
margin_right = 230.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Press Enter To Play"
align = 1
valign = 1

[node name="VSeparator2" type="VSeparator" parent="MainMC/MainVB"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 121.0
margin_right = 230.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 32 )
size_flags_vertical = 3

[node name="ScoreHB" type="HBoxContainer" parent="MainMC/MainVB"]
margin_top = 172.0
margin_right = 230.0
margin_bottom = 200.0
alignment = 2

[node name="ScoreVB" type="VBoxContainer" parent="MainMC/MainVB/ScoreHB"]
margin_left = 136.0
margin_right = 230.0
margin_bottom = 28.0
size_flags_horizontal = 9

[node name="ScoreLabel" type="Label" parent="MainMC/MainVB/ScoreHB/ScoreVB"]
margin_right = 94.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Score : 00000"
valign = 1

[node name="HighscoreLabel2" type="Label" parent="MainMC/MainVB/ScoreHB/ScoreVB"]
margin_top = 16.0
margin_right = 94.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Highscore : 0000"
valign = 1
